--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,12 +1,75 @@
-.header {
-  height: 700px;
-  width: 100%;
+aside {
+  background-color: #d79922;
+  background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
+  height: 400px;
+}
+
+
+/*Desktop layout*/
+@media only screen and (min-width: 1025px) {
+  aside {
+    width: 30%;
+    float: left;
+    margin: 220px 0px 220px 60px;
+  }
+
+  .container {
+    width: 50%;
+    float: right;
+    margin: 160px 60px;
+  }
+}
+.profile {
+  position: relative;
+  padding: 12px;
+  height: 80%;
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  align-items: center;
-  /* background-color: #0085cc; */
-  background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-light.png");
-  font-weight: bold;
+}
+
+/* Tablet and mobile layout*/
+@media only screen and (max-width: 1025px) {
+  .profile_image {
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 200px;
+  }
+}
+@media only screen and (min-width: 1025px) {
+  .profile_image {
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
+
+/* Tablet and mobile layout*/
+@media only screen and (max-width: 1025px) {
+  aside {
+    width: 100%;
+  }
+
+  .container {
+    margin: 0 auto;
+    width: 90%;
+  }
+}
+
+.profile_name {
   text-align: center;
+  width: 100%;
+  margin-top: -30px;
+}
+
+.profile_name h2 {
+  margin: 0;
+  font-weight: 300;
+  color: #fff;
+}
+
+.profile--bold {
+  font-weight: 600;
 }
