--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,40 +1,59 @@
-.text-area-container textarea{
+.newtweet_form {
   width: 100%;
-  background-color: transparent;
-  border-top: 0;
-  border-left: 0;
-  border-right: 0;
-  border-bottom: 5px solid black;
-  }
-  
-  .tweet-button-container{
-   display: flex;
-   justify-content: space-between;
-  }
+  padding: 10px;
+  background: #f4f1ec;
+  margin: 50px 0px;
+}
 
-  article.tweet {
-    border: 2px solid black;
-    padding: 1em;
-    margin: 1em 0;
-  }
+.form_textarea {
+  width: 100%;
+  height: 50px;
+  font-size: 20px;
+  display: block;
+  border: none;
+  border-bottom: 4px solid #545149;
+  background: #f4f1ec;
+  margin: 0;
+  outline: none;
+  overflow: auto;
+  resize: none;
+}
 
-  article.tweet:hover {
-    box-shadow: 5px 5px black;
-  }
-  article.tweet header, article.tweet footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
+.form_textarea::placeholder {
+  color: #545149;
+  opacity: 1;
+  font-weight: 600;
+  font-size: 25px;
+}
 
-  article.tweet footer div i:hover{
-    color: green;
+.form_input {
+  color: #000;
+  font-family: "Bungee", sans-serif;
+  font-size: 20px;
+  line-height: 20px;
+  color: #fff;
+  border: none;
+  background-color: #4056a1;
+  text-decoration: none;
+  padding: 6px 12px;
+  cursor: pointer;
+  margin-top: 0.8em;
+}
 
-  }
+.form_counter {
+  float: right;
+  font-family: "Bungee", sans-serif;
+  font-size: 1em;
+  font-weight: 600;
+  margin-right: 8px;
+  margin-top: 0.6em;
+  color: #000;
+}
 
-  article.tweet footer {
-    padding-top: 0.2em;
-    border-top: 2px solid black;
-  }
+#newtweet_maxerror {
+  display: none;
+}
 
-  
+#newtweet_empty {
+  display: none;
+}
